@@ -1,3 +1,6 @@
+2005-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/connection_base.hxx:
+  - Hopefull fixed auto_ptr issue, thanks Maximiliano Pin.
 2005-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx, src/connection_base.cxx:
   - Removed spurious "return," thanks Maximiliano Pin
